--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -3,11 +3,6 @@
     <head>
         <meta charset="utf-8">
         <title>Test</title>
-        <link rel="stylesheet" href="/styles/resets.css">
-        <link rel="stylesheet" href="/styles/base.css">
-        <link rel="stylesheet" href="/styles/header.css">
-        <link rel="stylesheet" href="/styles/form.css">
-        <link rel="stylesheet" href="/styles/footer.css">
     </head>
 
     <body>
@@ -22,14 +17,14 @@
         </header>
 
         <main>
-            <section>
-                <form class="" onsubmit="return Client.handleSubmit(event)">
-                    <input id="name" type="text" name="input" value="" onblur="onBlur()" placeholder="Name">
-                    <input type="submit" name="" value="submit" onclick="return Client.handleSubmit(event)" onsubmit="return Client.handleSubmit(event)">
+            <section class="light">
+                <form class="bordered dark" onsubmit="return Client.handleSubmit(event)">
+                    <input class="bordered light" id="name" type="text" name="input" value="" onblur="onBlur()" placeholder="Name">
+                    <input class="bordered button" type="submit" name="" value="submit" onclick="return Client.handleSubmit(event)" onsubmit="return Client.handleSubmit(event)">
                 </form>
             <section>
 
-            <section>
+            <section class="bordered dark">
                 <strong>Form Results:</strong>
                 <div id="results"></div>
             </section>
