--- a/src/client/styles/base.scss
+++ b/src/client/styles/base.scss
@@ -25,11 +25,12 @@ body {
             margin: 50px auto;
             padding: 1%;
             text-align: center;
-            border-radius: 30vw;
+            border-radius: 10vw;
         }
 
         .bordered {
             border: 5px solid $color-border;
+            border-radius: 1vw 3vw;
         }
 
         .button {
