--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -18,6 +18,8 @@
 
         <main>
             <section class="light">
+                <p>The AYLIEN Natural Language Processing and Machine Learning-powered API for analyzing and extracting various kinds of information from textual content. Please fill the form bellow.</p>
+                <br>
                 <form class="bordered dark" onsubmit="return Client.handleSubmit(event)">
                     <input class="bordered light" id="name" type="text" name="input" value="" onblur="onBlur()" placeholder="Name">
                     <input class="bordered button" type="submit" name="" value="submit" onclick="return Client.handleSubmit(event)" onsubmit="return Client.handleSubmit(event)">
@@ -26,7 +28,7 @@
 
             <section class="bordered dark">
                 <strong>Form Results:</strong>
-                <div id="results"></div>
+                <p id="results"></p>
             </section>
         </main>
 
