--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -21,7 +21,7 @@
                 <p>The AYLIEN Natural Language Processing and Machine Learning-powered API for analyzing and extracting various kinds of information from textual content. Please fill the form bellow.</p>
                 <br>
                 <form class="bordered dark" onsubmit="return Client.handleSubmit(event)">
-                    <input class="bordered light" id="name" type="text" name="input" value="" onblur="onBlur()" placeholder="Name">
+                    <input class="bordered light" id="name" type="text" name="input" value="" placeholder="Name">
                     <input class="bordered button" type="submit" name="" value="submit" onclick="return Client.handleSubmit(event)" onsubmit="return Client.handleSubmit(event)">
                 </form>
             <section>
