--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -1,40 +1,52 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-    <head>
-        <meta charset="utf-8">
-        <title>Test</title>
-    </head>
 
-    <body>
+<head>
+    <meta charset="utf-8">
+    <title>Test</title>
+</head>
 
-        <header>
-            <div class="">
-                Logo
-            </div>
-            <div class="">
-                navigation
-            </div>
-        </header>
+<body>
 
-        <main>
-            <section class="light">
-                <p>The AYLIEN Natural Language Processing and Machine Learning-powered API for analyzing and extracting various kinds of information from textual content. Please fill the form bellow.</p>
-                <br>
-                <form class="bordered dark" onsubmit="return Client.handleSubmit(event)">
-                    <input class="bordered light" id="name" type="text" name="input" value="" placeholder="Name">
-                    <input class="bordered button" type="submit" name="" value="submit" onclick="return Client.handleSubmit(event)" onsubmit="return Client.handleSubmit(event)">
-                </form>
+    <header>
+        <div class="">
+            Logo
+        </div>
+        <div class="">
+            navigation
+        </div>
+    </header>
+
+    <main>
+        <section class="light">
+            <p>The AYLIEN Natural Language Processing and Machine Learning-powered API for analyzing and extracting
+                various kinds of information from textual content. Please fill the form bellow.</p>
+            <br>
+            <form class="bordered dark" onsubmit="return Client.handleSubmit(event)">
+                <input class="bordered light" id="name" type="text" name="input" value="" placeholder="Name">
+                <input class="bordered button" type="submit" name="" value="submit"
+                    onclick="return Client.handleSubmit(event)" onsubmit="return Client.handleSubmit(event)">
+            </form>
             <section>
 
-            <section class="bordered dark">
-                <strong>Form Results:</strong>
-                <p id="results"></p>
-            </section>
-        </main>
+                <section class="bordered dark">
+                    <strong>Form Results:</strong>
+                    <p id="results"></p>
+                </section>
+    </main>
 
-        <footer>
-            <p>This is a footer</p>
-        </footer>
+    <footer>
+        <p>This is a footer</p>
+    </footer>
+    <script>
+        // Check that service workers are supported
+        if ('serviceWorker' in navigator) {
+            // Use the window load event to keep the page load performant
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('/service-worker.js');
+            });
+        }
+    </script>
+</body>
 
-    </body>
 </html>
